RESOLVED FIXED311001
Fix uninitialized member variables in WebAnimation and StyleOriginatedAnimation
https://bugs.webkit.org/show_bug.cgi?id=311001
Summary Fix uninitialized member variables in WebAnimation and StyleOriginatedAnimation
Nikolas Zimmermann
Reported 2026-03-28 15:47:02 PDT
valgrind complained about: ==1173712== Conditional jump or move depends on uninitialised value(s) ==1173712== at 0x8652740: WebCore::WebAnimation::updateFinishedState(WebCore::WebAnimation::DidSeek, WebCore::WebAnimation::SynchronouslyNotify) ==1173712== by 0x8652FA0: WebCore::WebAnimation::runPendingPlayTask() ==1173712== by 0x86539A6: WebCore::WebAnimation::maybeMarkAsReady() ==1173712== by 0x8641449: WebCore::WebAnimation::tick() ==1173712== by 0x86413BA: WebCore::StyleOriginatedAnimation::tick() ==1173712== by 0x860BA17: WebCore::AnimationTimelinesController::updateAnimationsAndSendEvents(WTF::Seconds) ==1173712== by 0x8AC1CBA: WebCore::Document::updateAnimationsAndSendEvents() A quick check reveals uninitialized variables - fix that.
Attachments
Nikolas Zimmermann
Comment 1 2026-03-28 15:49:19 PDT
EWS
Comment 2 2026-03-29 03:15:49 PDT
Committed 310179@main (1af4da6b6ac2): <https://commits.webkit.org/310179@main> Reviewed commits have been landed. Closing PR #61594 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-03-29 03:16:12 PDT
Note You need to log in before you can comment on or make changes to this bug.