Fix uninitialized member variables in WebAnimation and StyleOriginatedAnimation https://bugs.webkit.org/show_bug.cgi?id=311001

Reviewed by Antoine Quint.

Add default initializers to 4 member variables that were missing them,
while all surrounding members had proper initializers.

Valgrind trace:

==1173712== Conditional jump or move depends on uninitialised value(s)
==1173712==    at 0x8652740: WebCore::WebAnimation::updateFinishedState(WebCore::WebAnimation::DidSeek, WebCore::WebAnimation::SynchronouslyNotify)
==1173712==    by 0x8652FA0: WebCore::WebAnimation::runPendingPlayTask()
==1173712==    by 0x86539A6: WebCore::WebAnimation::maybeMarkAsReady()
==1173712==    by 0x8641449: WebCore::WebAnimation::tick()
==1173712==    by 0x86413BA: WebCore::StyleOriginatedAnimation::tick()
==1173712==    by 0x860BA17: WebCore::AnimationTimelinesController::updateAnimationsAndSendEvents(WTF::Seconds)
==1173712==    by 0x8AC1CBA: WebCore::Document::updateAnimationsAndSendEvents()

Covered by existing tests.

* Source/WebCore/animation/StyleOriginatedAnimation.h:
* Source/WebCore/animation/WebAnimation.h:

Canonical link: https://commits.webkit.org/310179@main